# solar-challenge

./: .auto-claude-status  .claude_settings.json  .envrc  .gitignore  .jcodemunch.jsonc  .mcp.json  CLAUDE.md  HEAT_PUMP_REPORT_EXAMPLE.md  README.md  orchestrator.yaml  pyproject.toml  test_heat_pump_report.py
docs/: cost-recovery-finance-model.md  domain-library-consumption.md  finance-spreadsheet-reconciliation.md  flexibility-buildability.md  web-ui-design.md
docs/prds/: cost-recovery-householder-billing.capability-manifest.md  cost-recovery-householder-billing.md  discrete-install-config-sweep.capability-manifest.md  discrete-install-config-sweep.md  domain-library-extraction.capability-manifest.md  domain-library-extraction.md  enhanced-grid-services-capacity-at-events.capability-manifest.md  enhanced-grid-services-capacity-at-events.md  financial-layer-battery-fidelity.capability-manifest.md  financial-layer-battery-fidelity.md  flexibility-value-finance-integration.capability-manifest.md  flexibility-value-finance-integration.md  inter-home-community-energy-sharing.capability-manifest.md  inter-home-community-energy-sharing.md  pv-degradation-live-sim.md  tou-grid-charging-battery-arbitrage.capability-manifest.md  tou-grid-charging-battery-arbitrage.md  web-ai-assistant.capability-manifest.md  web-ai-assistant.md  web-ui-engine-capability-parity.capability-manifest.md  web-ui-engine-capability-parity.md
review/: briefing.yaml  gap-register.md
scenarios/: bristol-arbitrage.yaml  bristol-community.yaml  bristol-fin-calibration.yaml  bristol-phase1-aged.yaml  bristol-phase1-flex.yaml  bristol-phase1.yaml  bristol-with-evs.yaml
src/solar_challenge/: __init__.py  battery.py  community.py  config.py  dispatch.py  ev.py  finance.py  fleet.py  flex.py  flow.py  gridservices.py  heat_pump.py  home.py  load.py  location.py  optimize.py  output.py  pv.py  seg.py  tariff.py  validation.py  weather.py
tests/: conftest.py
tests/e2e/: conftest.py  test_compare_page.py  test_dark_mode_pages.py  test_fleet_interactions.py  test_fleet_simulation.py  test_history_interactions.py  (+8 more)
(+111 files in other folders)
