[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solar-challenge"
version = "0.1.0"
description = "Energy flow simulator for domestic PV and battery systems"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Leo Dawn"}
]
keywords = ["solar", "pv", "battery", "energy", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pvlib>=0.10.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0.0",
    "typer[all]>=0.9.0",
]

[project.scripts]
solar-challenge = "solar_challenge.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
]
stochastic = [
    "richardsonpy>=0.2.0",
]
web = [
    "flask>=3.0.0",
    "plotly>=5.0.0",
    "pyarrow>=10.0.0",
]
e2e = [
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "e2e: end-to-end browser tests (require playwright)",
    "slow: tests that make real external API calls (e.g. PVGIS)",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["venv", ".venv", "build", "dist"]
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["pvlib.*", "pandas.*", "numpy.*", "yaml", "richardsonpy.*", "flask.*", "plotly.*"]
ignore_missing_imports = true
